apps/keeper/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keeper-mcp-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: keeper-tls
  routes:
    - match: Host(`calendar.matiix310.dev`) && PathPrefix(`/mcp`)
      kind: Rule
      services:
        - name: keeper-web
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keeper-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: keeper-tls
  routes:
    - match: Host(`calendar.matiix310.dev`)
      kind: Rule
      middlewares:
        - name: block-signup
          namespace: keeper
        # - name: authentik-auth
        #   namespace: authentik
      services:
        - name: keeper-web
          port: 3000
